test/zinc_source/compile_errors/callables/10_annotated_param_wrong_arity.zn
// expected-error: parameter 'f' expects a compatible '\(i64\)->i64' value
fn apply(f: (i64) -> i64, x: i64) {
    return f(x)
}

fn add(a, b) {
    return a + b
}

fn main() {
    print(apply(add, 3))
}
